2009-11-23  Deniz Dogan  <deniz.a.m.dogan@gmail.com>  (tiny change)

	* window.el (move-to-window-line-last-op): New var.
	(move-to-window-line-top-bottom): New command.
	(global-map): Bind M-r move-to-window-line-top-bottom.

2009-11-23  Sven Joachim  <svenjoac@gmx.de>

	* dired-x.el (dired-guess-shell-alist-default):
	Support xz format.  (Bug#4953)

2009-11-22  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/srecode/map.el (srecode-get-maps):
	* cedet/semantic/wisent/wisent.el (wisent-parse-toggle-verbose-flag):
	* cedet/semantic/wisent/comp.el (wisent-toggle-verbose-flag):
	* cedet/semantic/decorate/mode.el (semantic-decoration-mode)
	(semantic-toggle-decoration-style):
	* cedet/semantic/decorate/include.el
	(semantic-decoration-include-describe)
	(semantic-decoration-unknown-include-describe)
	(semantic-decoration-unparsed-include-describe)
	(semantic-decoration-all-include-summary):
	* cedet/semantic/bovine/c.el (semantic-c-debug-mode-init):
	* cedet/semantic/analyze/complete.el
	(semantic-analyze-possible-completions):
	* cedet/semantic/util-modes.el (semantic-highlight-edits-mode)
	(semantic-show-unmatched-syntax-mode)
	(semantic-show-parser-state-mode, semantic-stickyfunc-mode)
	(semantic-highlight-func-mode):
	* cedet/semantic/util.el (semantic-describe-buffer):
	* cedet/semantic/symref.el (semantic-symref-find-references-by-name)
	(semantic-symref-find-tags-by-name)
	(semantic-symref-find-tags-by-regexp)
	(semantic-symref-find-tags-by-completion)
	(semantic-symref-find-file-references-by-name)
	(semantic-symref-find-text):
	* cedet/semantic/senator.el (senator-copy-tag, senator-kill-tag)
	(senator-yank-tag):
	* cedet/semantic/scope.el (semantic-calculate-scope):
	* cedet/semantic/mru-bookmark.el (semantic-mru-bookmark-mode):
	* cedet/semantic/idle.el (semantic-idle-scheduler-mode)
	(define-semantic-idle-service):
	* cedet/semantic/complete.el (semantic-complete-analyze-inline)
	(semantic-complete-analyze-inline-idle):